--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ForgotPasswordActivity"></activity>
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".activities.ForgotPasswordActivity">
+
+        </activity>
+        <activity android:name=".SignUpActivity"></activity>
         <activity
             android:name=".activities.LoginActivity"
+            android:theme="@style/NoPreview"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
