--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".activities.ForgotPasswordActivity">
 
         </activity>
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".activities.SignUpActivity" />
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/NoPreview"
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
