Agrego Firestore. No funciona el scroll todavía ni se muestran los fragments.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:theme="@android:style/Theme.NoDisplay"
-            android:name=".MainEmptyActivity">
+            android:name=".activities.MainEmptyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
