--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.google.android.material:material:1.3.0-alpha01"
-
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
 
 }
